<resources>
    <string name="app_name">Waves Of Food</string>
    <string name="app_label">Admin Waves Of Food</string>
    <string name="slogan_splash">Deliver Favorite Food</string>
    <string name="slogan_start">Enjoy Restaurant Quality Meals\n at Home</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_admin">Admin Dashboard</string>
    <string name="title_activity_home">Explore Your Favorite Food</string>
    <!--    concise-->
    <string name="concise_next">Next</string>
    <string name="concise_name">Name</string>
    <string name="concise_email">Email</string>
    <string name="concise_email_phone">Email or Phone number</string>
    <string name="concise_password">Password</string>
    <string name="concise_google">Google</string>
    <string name="concise_facebook">Facebook</string>
    <string name="concise_login">Login</string>
    <string name="concise_sign_up">Sign Up</string>
    <string name="concise_create_account">Create Account</string>
    <string name="concise_welcome">"Welcome !"</string>
    <string name="concise_home">Home</string>
    <string name="concise_cart">Cart</string>
    <string name="concise_search">Search</string>
    <string name="concise_history">History</string>
    <string name="concise_profile">Profile</string>
    <string name="concise_popular">Popular</string>
    <string name="concise_view_menu">View Menu</string>
    <string name="concise_menu">Menu</string>
    <string name="concise_recent_buy">Recent buy</string>
    <string name="concise_buy_again">Buy again</string>
    <string name="concise_address">Address</string>
    <string name="concise_phone">Phone</string>
    <string name="concise_notification">Notification</string>
    <string name="concise_edit">Edit</string>
    <string name="concise_payment_method">Payment Method</string>
    <string name="concise_total_amount">Total Amount:</string>
    <!--    prompt-->
    <string name="prompt_login">Login to your\nAdmin Dashboard</string>
    <string name="prompt_sign_up">Sign up here</string>
    <string name="prompt_sign_in">Sign in or register</string>
    <string name="prompt_login_with">Or\n<b>Continue with</b></string>
    <string name="prompt_sign_up_with">Or\n<b>Sign up with</b></string>
    <string name="prompt_name_owner">Name of Owner</string>
    <string name="prompt_name_restaurant">Name of Restaurant</string>
    <string name="prompt_not_account"><u>Don\'t have account?</u></string>
    <string name="prompt_have_account"><u>Already have account?</u></string>
    <string name="prompt_add_location">Choose Your Location</string>
    <string name="prompt_add_to_cart">Add to Cart</string>
    <string name="prompt_search">What do you want to order?</string>
    <string name="prompt_re_buy">Buy again</string>
    <string name="prompt_save_info">Save Information</string>
    <string name="prompt_place_order">Place my order</string>
    <string name="prompt_order_success">Congrats\nYour Order Placed</string>
    <string name="prompt_go_home">Go home</string>
    <string name="prompt_choose_location">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <string name="prompt_pending_order">Pending Order</string>
    <!--    action-->
    <string name="action_proceed">Proceed</string>
    <!--    invalid-->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_login_failed">"Login failed"</string>
    <string name="invalid_received">Received</string>
    <string name="invalid_not_received">Not Received</string>
    <string name="invalid_pending">Pending</string>

    <!--other-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">407236622916-09rkefthrdrvda5p9igbvcsljs62avgh.apps.googleusercontent.com</string>
    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="lorem_ipsum_email">loremipsum@email.com</string>
    <string name="lorem_ipsum_long">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="lorem_ipsum_phone">0123456789</string>
    <string name="action_completed">Completed\nOrder</string>
    <string name="action_time_earning">Whole Time\nEarning</string>
    <string name="prompt_add_menu">Add Menu</string>
    <string name="prompt_all_item">All Item Menu</string>
    <string name="concise_log_out">Log Out</string>
    <string name="concise_order_dispatch">Order dispatch</string>
    <string name="prompt_add_item">Add Item</string>
    <string name="concise_item_name">Item Name</string>
    <string name="concise_item_price">Item Price</string>
    <string name="concise_item_image">Item Image</string>
    <string name="prompt_short_description">Short Description</string>
    <string name="concise_ingredients">Ingredients</string>
    <string name="pick_image">Pick image</string>
    <string name="concise_payment">Payment</string>
    <string name="prompt_edit_profile">Edit your profile</string>
    <string name="prompt_click_to_edit">Click here to edit</string>
    <string name="prompt_create_new_user">Create New User</string>
    <string name="concise_email_or_phone">Email or phone number</string>
    <string name="concise_quantity">Quantity:</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="concise_order_detail">Order Details</string>
    <string name="concise_empty">Empty</string>
    <string name="prompt_completed_order">Completed Order</string>
    <string name="concise_time">Time:</string>
    <string name="concise_location">Location:</string>


</resources>