<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            app:srcCompat="@drawable/back_arrow_icon" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concise_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.WavesOfFood.Title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prompt_edit_profile"
            android:textAppearance="@style/TextAppearance.WavesOfFood.Highlight" />

        <CheckedTextView
            android:id="@+id/checkedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/edit_btn"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/space_xs"
            android:text="@string/prompt_click_to_edit"
            android:checked="false"
            android:textAppearance="@style/TextAppearance.WavesOfFood.Highlight" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:text="@string/concise_name"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name" />


            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:text="@string/lorem_ipsum_short"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Hint" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_address" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption"
                android:text="@string/lorem_ipsum_long" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:background="@drawable/background_edit_text"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_email" />

            <EditText
                android:id="@+id/gmailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="100"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption"
                android:text="@string/lorem_ipsum_email" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_phone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="12"
                android:inputType="phone"
                android:text="@string/lorem_ipsum_phone"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="@dimen/space_s"
            android:paddingVertical="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/short_title_spacing"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Name"
                android:text="@string/concise_password" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="12"
                android:inputType="textPassword"
                android:text="@string/lorem_ipsum_short"
                android:textAppearance="@style/TextAppearance.WavesOfFood.Caption" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/CustomStyle.WavesOfFood.ElevationButton"
        android:text="@string/prompt_save_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>